# phigs

./: CMakeLists.txt
.github/workflows/: main.yml
.github/workflows/centos7/: entrypoint.sh
.github/workflows/centos8/: action.yaml  entrypoint.sh
.github/workflows/osx/: entrypoint.sh
cmake/Templates/: phigsConfig.cmake.in
include/Vk/: VkComponent.h  VkComponentList.h  VkMenuItem.h  VkSubMenu.h  VkWidgetList.h  VkWorkstation.h
include/phigs/: alloc.h  ar.h  attr.h  css.h  err.h  errnum.h  list.h  mat_utils.h  phg.h  phg_dt.h  phg_el.h  phgargs.h  phgretdata.h  phgtype.h  phigs.h  phigsf77.h  phigsfunc.h  psl.h  sin.h  util.h  ws.h  ws_inp.h  ws_type.h
include/phigs/private/: arP.h  cbP.h  cssP.h  cvsP.h  errP.h  evP.h  fasd3P.h  hdlP.h  htabP.h  phgP.h  sinP.h  sinqP.h  sofas3P.h  wsb.h  wsglP.h  wsxP.h
include/phigs/util/: conv.h  ftn.h  htab.h  mat.h  nset.h  sem.h
share/doc/: TODO
src/: CMakeLists.txt  Makefile  css_el.c  css_inq.c  css_pr.c  css_set.c  css_stb.c  css_str.c  example1.c  example2.c  mat_utils.c  misc_utils.c  phg.c  phg_attr.c  phg_col.c  phg_dr.c  phg_el.c  phg_inq.c  phg_str.c  ws.c  wsb.c  wsgl.c
src/Revolver/: CMakeLists.txt  Makefile  Workstation.C  Workstation.h
src/examples/: CMakeLists.txt  Makefile  example1.c  example2.c  example3.c  example5.c  example6.c  example7.c  example8.c  example9.c
src/libVk/: CMakeLists.txt  VkBase.C
src/libphigs/: CMakeLists.txt  Makefile  ar.c  ar_hier.c  ar_ops.c  cb.c  cb_ar.c  cb_el.c  cb_extel.c  cb_phg.c  cb_str.c  cb_ws.c  css_el.c  css_ini.c  css_inq.c  css_pr.c  css_str.c  css_ws.c  fasd3.c  fb_el.c  fb_str.c  fb_ws.c  hdl.c  hdl_ext.c  htab_util.c  inp_ev.c  list.c  mat_utils.c  phg.c  phg_attr.c  phg_col.c  phg_el.c  phg_err.c  phg_errnum.c  phg_hdl.c  phg_inp.c  phg_inq.c  phg_psl.c  phg_tr.c  phg_ut.c  (+43 more)
src/libvk/: CMakeLists.txt  Makefile  VkApp.C  VkComponent.C  VkComponentList.C  VkMenu.C  VkMenuAction.C  VkMenuItem.C  VkSimpleWindow.C  VkWorkstation.C
src/test_c/: CMakeLists.txt  eldata.c  objdisplay.c  test_c1.c  test_c10.c  test_c2.c  test_c3.c  test_c4.c  test_c5.c  test_c6.c  test_c7.c  test_c8.c  test_c9.c
src/test_f/: test_f1.f
src/tools/: CMakeLists.txt  objdisplay.c
trunk/include/Vk/: VkApp.h  VkComponent.h  VkMenu.h  VkMenuItem.h  VkSimpleWindow.h
trunk/include/phigs/: ar.h  attr.h  css.h  err.h  errnum.h  list.h  mat_utils.h  node.h  phg.h  phg_el.h  phgargs.h  phgretdata.h  phgtype.h  phigs.h  phigsfunc.h  psl.h  sin.h  stdfloat.h  util.h  ws.h  ws_inp.h  ws_type.h
trunk/include/phigs/private/: arP.h  cbP.h  evP.h  evtP.h  fasd3P.h  hdlP.h  htabP.h  phgP.h  sinP.h  sinqP.h  sofas3P.h  wsb.h  wsglP.h  wsxP.h
trunk/include/phigs/util/: ftn.h  glc.h  htab.h  mat.h  nset.h  task.h
trunk/share/doc/: TODO
trunk/src/: CMakeLists.txt  Makefile  css_el.c  css_ini.c  css_inq.c  css_pr.c  css_stb.c  css_str.c  css_ws.c  example1.c  example2.c  mat_utils.c  misc_utils.c  phg_attr.c  phg_col.c  phg_dr.c  phg_el.c  phg_str.c  phg_views.c  phg_ws.c  ws.c  wsb.c  wsgl.c
trunk/src/Revolver/: CMakeLists.txt  DrawingArea.C  DrawingArea.H  Main.C  Makefile  Workstation.h
trunk/src/examples/: CMakeLists.txt  Makefile  example1.c  example10.c  example4.c  example5.c  example6.c  example7.c  example8.c  example9.c  objdisplay.c
trunk/src/libVk/: CMakeLists.txt
trunk/src/libphigs/: CMakeLists.txt  Makefile  ar.c  ar_conv.c  ar_hier.c  ar_ops.c  cb.c  cb_el.c  cb_extel.c  cb_inq.c  cb_phg.c  cb_str.c  cb_ws.c  cb_wst.c  css_el.c  css_ini.c  css_pr.c  css_set.c  fasd3.c  fb_el.c  fb_phg.c  fb_str.c  fb_ws.c  fnt.c  fnt_mroman.c  fnt_roman.c  hdl.c  hdl_ext.c  hdl_plus.c  inp_ev.c  list.c  mat_utils.c  phg.c  phg_attr.c  phg_col.c  phg_el.c  phg_err.c  phg_errnum.c  phg_fn.c  phg_hdl.c  (+51 more)
trunk/src/libvk/: Makefile  VkApp.C  VkComponent.C  VkComponentList.C  VkMenu.C  VkMenuAction.C
trunk/src/test_c/: CMakeLists.txt  objdisplay.c  test_c1.c  test_c10.c  test_c2.c  test_c3.c  test_c4.c  test_c5.c  test_c6.c  test_c7.c  test_c8.c  test_c9.c
trunk/src/test_f/: test_f1.f
