SET(PHIGS_LIBRARIES phigs
    ${OPENGL_LIBRARY} ${X11_LIBRARY} ${XMU_LIBRARY} m)

ADD_EXECUTABLE(example1 example1.c)
TARGET_LINK_LIBRARIES(example1 ${PHIGS_LIBRARIES})

ADD_EXECUTABLE(example2 example2.c)
TARGET_LINK_LIBRARIES(example2 ${PHIGS_LIBRARIES})

ADD_EXECUTABLE(example3 example3.c)
TARGET_LINK_LIBRARIES(example3 ${PHIGS_LIBRARIES})

ADD_EXECUTABLE(example4 example4.c)
TARGET_LINK_LIBRARIES(example4 ${PHIGS_LIBRARIES})

ADD_EXECUTABLE(example5 example5.c)
TARGET_LINK_LIBRARIES(example5 ${PHIGS_LIBRARIES})

ADD_EXECUTABLE(example6 example6.c)
TARGET_LINK_LIBRARIES(example6 ${PHIGS_LIBRARIES})

ADD_EXECUTABLE(example7 example7.c)
TARGET_LINK_LIBRARIES(example7 ${PHIGS_LIBRARIES})

ADD_EXECUTABLE(example8 example8.c)
TARGET_LINK_LIBRARIES(example8 ${PHIGS_LIBRARIES})

ADD_EXECUTABLE(example9 example9.c)
TARGET_LINK_LIBRARIES(example9 ${PHIGS_LIBRARIES})

ADD_EXECUTABLE(objdisplay objdisplay.c glm.c )
TARGET_LINK_LIBRARIES(objdisplay ${PHIGS_LIBRARIES})

